--- a/src/main/resources/assets/groovyengine/lang/en_us.json
+++ b/src/main/resources/assets/groovyengine/lang/en_us.json
@@ -1,3 +1,5 @@
-{
+{  "key.groovyengine.toggle_imgui": "Toggle ImGui",
+"key.categories.groovyengine": "GroovyEngine",
+"key.groovyengine.open_editor_screen": "Open Editor Screen"
 
 }
