--- a/src/main/resources/assets/groovyengine/lang/en_us.json
+++ b/src/main/resources/assets/groovyengine/lang/en_us.json
@@ -1,5 +1,6 @@
-{  "key.groovyengine.toggle_imgui": "Toggle ImGui",
-"key.categories.groovyengine": "GroovyEngine",
-"key.groovyengine.open_editor_screen": "Open Editor Screen"
+{
+  "key.groovyengine.toggle_imgui": "Toggle ImGui",
+  "key.categories.groovyengine": "GroovyEngine",
+  "key.groovyengine.open_editor_screen": "Open Editor Screen"
 
 }
